--- a/aopdemo/pom.xml
+++ b/aopdemo/pom.xml
@@ -14,6 +14,7 @@
     <groupId>com.fwp</groupId>
     <artifactId>aopdemo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
