--- a/aopdemo/pom.xml
+++ b/aopdemo/pom.xml
@@ -35,6 +35,10 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.54</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.xml.stream</groupId>
+            <artifactId>sjsxp</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
-
 </project>
