--- a/filemanager/src/main/resources/application.yaml
+++ b/filemanager/src/main/resources/application.yaml
@@ -17,8 +17,8 @@ spring:
       password: root
       driver-class-name: com.mysql.jdbc.Driver
       remove-abandoned-timeout: 20
-      #url: jdbc:mysql://localhost:3306/file_manager
-      url: jdbc:mysql://localhost:3306/test
+#      url: jdbc:mysql://localhost:3306/file_manager
+      url: jdbc:mysql://localhost:3306/iotest
 
 
 
