--- a/webdemo/pom.xml
+++ b/webdemo/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.fwp</groupId>
-    <artifactId>aopdemo</artifactId>
+    <artifactId>webdemo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
