--- a/webdemo/src/main/resources/application.yaml
+++ b/webdemo/src/main/resources/application.yaml
@@ -8,3 +8,13 @@ spring:
     username: root
     password: Wmi@2019
     driver-class-name: com.mysql.jdbc.Driver
+logging:
+  level: info
+
+org:
+  apache:
+    commons:
+      logging:
+        simplelog:
+          defaultlog: info
+
