--- a/haoziyuan/src/main/resources/application.yml
+++ b/haoziyuan/src/main/resources/application.yml
@@ -2,22 +2,18 @@ server:
   port: 8080
 spring:
   application:
-    name: fileManager
-  http:
-  servlet:
-    multipart:
-      max-request-size: 10MB
-      max-file-size: 10MB
+    name: haoziyuan
+
+#  数据源
   datasource:
     druid:
       username: root
       password: root
       driver-class-name: com.mysql.jdbc.Driver
       remove-abandoned-timeout: 20
-      #      url: jdbc:mysql://localhost:3306/file_manager
       url: jdbc:mysql://localhost:3306/iotest
-###ThymeLeaf配置
 
+#ThymeLeaf配置
   thymeleaf:
     #模板的模式，支持 HTML, XML TEXT JAVASCRIPT
     mode: HTML5
