--- a/webdemo/src/main/resources/application.yaml
+++ b/webdemo/src/main/resources/application.yaml
@@ -3,11 +3,30 @@ server:
 spring:
   application:
     name: webdemo
+
+#数据源
   datasource:
     url: jdbc:mysql://172.19.25.196:3306/sbc-bff?characterEncoding=UTF-8&&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false&connectTimeout=0&serverTimezone=Asia/Shanghai
     username: root
     password: Wmi@2019
     driver-class-name: com.mysql.jdbc.Driver
+
+#redis配置
+  redis:
+    host: 47.113.111.240
+    port: 6379
+    timeout: 3        #连接超时时间（毫秒）
+    poolMaxTotal: 10  #连接池中的最大连接数
+    poolMaxIdle : 10  #连接池中的最大空闲连接
+    poolMaxWait : 3   #连接池最大阻塞等待时间（使用负值表示没有限制）
+
+
+
+
+
+
+
+
 #logging:
 #  level: info
 
