--- a/springboot-rabbitmq/pom.xml
+++ b/springboot-rabbitmq/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.fwp.demo</groupId>
-    <artifactId>springboot-jpa</artifactId>
+    <artifactId>springboot-rabbitmq</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <!--springboot父工程,对常用的依赖进行了版本管理-->
@@ -21,40 +21,17 @@
     </properties>
 
     <dependencies>
-        <!--启动器-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <version>2.0.4.RELEASE</version>
+            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
-        <!--web启动器-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.0.4.RELEASE</version>
+            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
-        <!--jpa-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <!--lombok-->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
-        </dependency>
-        <!--mysql驱动-->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.15</version>
-        </dependency>
-        <!--fastJson-->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.46</version>
+            <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
     </dependencies>
 </project>
