--- a/springboot-dubbo/pom.xml
+++ b/springboot-dubbo/pom.xml
@@ -15,7 +15,7 @@
     </parent>
 
     <groupId>com.demo.dubbo</groupId>
-    <artifactId>dubbo</artifactId>
+    <artifactId>springboot-dubbo</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
