修改配置文件

--- a/springboot-mybatis/src/main/resources/application.yml
+++ b/springboot-mybatis/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
 #mybatis的相关配置
 mybatis:
   #mapper配置文件
-  mapper-locations: classpath:repository/*.xml
+  mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.fwp.demo.entity
   #开启驼峰命名
   configuration:
