--- a/springboot-dubbo/provider/src/main/resources/application.yml
+++ b/springboot-dubbo/provider/src/main/resources/application.yml
@@ -1,13 +1,16 @@
+spring:
+  main:
+    allow-bean-definition-overriding: true
 server:
   port: 8080
-spring:
-  dubbo:
-    application:
-      name: springboot-dubbo-demo #应用名
-    registry:
-      address: zookeeper://localhost #zookeeper地址
-      port: 2181 #提供注册的端口
-    protocol:
-      name: dubbo
-      port: 20890 #dubbo服务暴露的端口
-    scan: com.demo #扫描的包名
+dubbo:
+  application:
+    name: dubbo-provider #应用名
+    qos-enable: false   # 关闭qos
+  registry:
+    address: zookeeper://127.0.0.1:2181 #zookeeper地址  注意事项: 2.7版本ip必须写在ip后面
+  protocol:
+    name: dubbo
+    port: "20880" #dubbo服务暴露的端口
+  scan:
+    base-packages: com.fwp.demo.service #扫描的包名
