--- a/springboot-mybatis/src/main/resources/application.yml
+++ b/springboot-mybatis/src/main/resources/application.yml
@@ -4,15 +4,23 @@ spring:
   #数据库连接配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/test?characterEncoding=utf-8&serverTimezone=GMT&useSSL=false
+#    url: jdbc:mysql://localhost:3307/test?characterEncoding=utf-8&serverTimezone=GMT&useSSL=false
+#    username: root
+#    password: root123
+    url: jdbc:mysql://localhost:3306/test?characterEncoding=utf-8&serverTimezone=GMT&useSSL=false
     username: root
-    password: root123
-
+    password: root
+    hikari:
+      max-lifetime: 50000
 #mybatis的相关配置
 mybatis:
   #mapper配置文件
   mapper-locations: classpath:mapper/*.xml
   #开启驼峰命名
-  type-aliases-package: com.hand.report.entity
+  type-aliases-package: com.fwp.demo.entity
   configuration:
     map-underscore-to-camel-case: true
+logging:
+  level:
+    level: info
+
