--- a/springboot-study/src/main/resources/application.yaml
+++ b/springboot-study/src/main/resources/application.yaml
@@ -51,3 +51,11 @@ spring:
 #        simplelog:
 #          defaultlog: info
 
+
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    passowrd: guest
+    virtualHost: /
+
