--- a/springboot-study/pom.xml
+++ b/springboot-study/pom.xml
@@ -159,5 +159,11 @@
             <groupId>org.springframework.amqp</groupId>
             <artifactId>spring-rabbit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.10.3</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
