--- a/springboot-study/pom.xml
+++ b/springboot-study/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.fwp</groupId>
-    <artifactId>webdemo</artifactId>
+    <artifactId>springboot-study</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
