--- a/springboot-study/src/main/resources/application-datasource.yml
+++ b/springboot-study/src/main/resources/application-datasource.yml
@@ -6,7 +6,7 @@ datasource:
   username: root
   password: root123
   druid:
-    #2.连接池配置
+    #连接池配置
     #初始化连接池的连接数量 大小，最小，最大
     initial-size: 5
     min-idle: 5
