--- a/springboot-study/pom.xml
+++ b/springboot-study/pom.xml
@@ -132,6 +132,11 @@
             <version>1.1.10</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.12</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.15</version>
