--- a/springboot-study/src/main/resources/application.yml
+++ b/springboot-study/src/main/resources/application.yml
@@ -3,6 +3,11 @@ server:
 spring:
   application:
     name: springboot-study
+  #注册中心
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
   #数据源
   datasource:
     username: root
@@ -18,7 +23,7 @@ spring:
       min-idle: 5
       # 连接池最大连接数量
       max-active: 20
-      # 获取连接时最大等待时间，单位毫秒
+      # 获取连接时最大等待时间，单位毫秒`
       max-wait: 60000
       # 申请连接的时候检测，如果空闲时间大于timeBetweenEvictionRunsMillis，执行validationQuery检测连接是否有效。
       test-while-idle: true
