--- a/springboot-mybatis/pom.xml
+++ b/springboot-mybatis/pom.xml
@@ -8,11 +8,10 @@
     <artifactId>springboot-mybatis</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <!--springboot父工程,对常用的依赖进行了版本管理-->
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.4.RELEASE</version>
+        <groupId>com.study.cloud</groupId>
+        <artifactId>springcloud-study</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <!--指定jdk版本-->
