--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
         <junit.version>4.13.2</junit.version>
         <lombok.version>1.16.10</lombok.version>
         <log4j.vsrsion>1.2.17</log4j.vsrsion>
-        <springboot.vsrsion>2.23</springboot.vsrsion>
+        <springboot.vsrsion>2.2.5.RELEASE</springboot.vsrsion>
+        <jjwt.version>0.9.1</jjwt.version>
     </properties>
     <!--  因为是总项目 所以用dependencyManagement来管理  因为其他的子项目就不会来管理版本了了 可以直接引用 -->
     <dependencyManagement>
@@ -74,12 +75,14 @@
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>2.1.0</version>
             </dependency>
+
             <!--单元测试 -->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
             </dependency>
+
             <!-- lombok-->
             <dependency>
                 <groupId>org.projectlombok</groupId>
@@ -97,6 +100,13 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
                 <version>1.2.3</version>
+            </dependency>
+
+            <!-- Jwt -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>0.9.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
