--- a/springboot-zuul/pom.xml
+++ b/springboot-zuul/pom.xml
@@ -18,6 +18,14 @@
     </properties>
 
     <dependencies>
+
+        <!-- common-->
+        <dependency>
+            <groupId>com.study.cloud</groupId>
+            <artifactId>springboot-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -31,17 +39,11 @@
             <artifactId>spring-cloud-alibaba-nacos-discovery</artifactId>
             <version>2.1.0.RELEASE</version>
         </dependency>
-
-        <!-- Jwt -->
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
 </project>
