--- a/springboot-study/src/main/resources/application.yml
+++ b/springboot-study/src/main/resources/application.yml
@@ -51,14 +51,24 @@ spring:
 
 
   #redis配置
+#  redis:
+##    host: 47.113.111.240
+#    host: 127.0.0.1
+#    port: 6379
+#    timeout: 3        #连接超时时间（毫秒）
+#    poolMaxTotal: 10  #连接池中的最大连接数
+#    poolMaxIdle : 10  #连接池中的最大空闲连接
+#    poolMaxWait : 3   #连接池最大阻塞等待时间（使用负值表示没有限制）
+
+  #集群配置
   redis:
-#    host: 47.113.111.240
-    host: 127.0.0.1
-    port: 6379
+    cluster:
+      nodes:
+        - 127.0.0.1:6379
     timeout: 3        #连接超时时间（毫秒）
     poolMaxTotal: 10  #连接池中的最大连接数
-    poolMaxIdle : 10  #连接池中的最大空闲连接
-    poolMaxWait : 3   #连接池最大阻塞等待时间（使用负值表示没有限制）
+    poolMaxIdle: 10  #连接池中的最大空闲连接
+    poolMaxWait: 3   #连接池最大阻塞等待时间（使用负值表示没有限制）
 
   rocketmq:
     name-server: 127.0.0.1:9876
