--- a/springboot-common/pom.xml
+++ b/springboot-common/pom.xml
@@ -8,8 +8,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>com.study.cloud</groupId>
     <artifactId>springboot-common</artifactId>
-    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!-- Jwt -->
