--- a/springboot-study/pom.xml
+++ b/springboot-study/pom.xml
@@ -186,5 +186,10 @@
             <version>2.2.5.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>QLExpress</artifactId>
+            <version>3.2.0</version>
+        </dependency>
     </dependencies>
 </project>
